--- a/mariadb-replication/tasks/main.yml
+++ b/mariadb-replication/tasks/main.yml
@@ -1,12 +1,14 @@
 ---
 # Setup/install tasks.
-- include: setup-RedHat.yml
+- name: Install MySQL
+  include: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
   tags: install
 # Configure MySQL.
-- include: secure-installation.yml
+- name: Config MySQL
+  include: secure-installation.yml
   tags: config
-# - include_tasks: databases.yml
-# - include_tasks: users.yml
-- include: replication.yml
+
+- name: Config Replication
+  include: replication.yml
   tags: config-rep
