--- a/mariadb-replication/tasks/setup-RedHat.yml
+++ b/mariadb-replication/tasks/setup-RedHat.yml
@@ -82,7 +82,39 @@
   template:
     src: server.cnf.j2
     dest: /etc/my.cnf.d/server.cnf
-  tags: test
+    
+- name: Check if root password is set
+  shell: >
+    mysqladmin -u root status
+  changed_when: false
+  register: root_pwd_check
+
+- name: Set MariaDB root password for the first time (root@localhost)
+  mysql_user:
+    name: root
+    password: "{{ mariadb_root_password }}"
+    host: localhost
+    state: present
+  when: root_pwd_check.rc == 0
+
+- name: Set MariaDB root password for 127.0.0.1, ::1
+  mysql_user:
+    name: root
+    password: "{{ mariadb_root_password }}"
+    host: "{{ item }}"
+    login_user: root
+    login_password: "{{ mariadb_root_password }}"
+    state: present
+  with_items:
+    - ::1
+    - 127.0.0.1
+  when: root_pwd_check.rc == 0
+
+- name: Copying /root/.my.cnf config
+  template:
+    src: root-my.cnf.j2
+    dest: /root/.my.cnf
+
 
 - name: Ensure mariabd started and enabled
   systemd:
