update script fix bug password root

--- a/mariadb-replication/defaults/main.yml
+++ b/mariadb-replication/defaults/main.yml
@@ -14,3 +14,4 @@ mysql_replication_user:
   name: replication
   password: secret 
 mariadb_root_password: 123456
+mariadb_socket: /var/lib/mysql/mysql.sock
