--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,3 @@
 [databases]
-192.168.10.20 ansible_port=1102 ansible_host=192.168.10.20 server_id=34 
-192.168.10.234 ansible_port=1102 ansible_host=192.168.10.234 server_id=35
-192.168.10.22 ansible_port=1102 ansible_host=192.168.10.22 server_id=36
+103.138.110.26 ansible_port=22 ansible_host=103.138.110.26 server_id=34 
+;$192.168.10.234 ansible_port=1102 ansible_host=192.168.10.234 server_id=35
