--- a/mariadb-replication/tasks/setup-RedHat.yml
+++ b/mariadb-replication/tasks/setup-RedHat.yml
@@ -83,32 +83,47 @@
     src: server.cnf.j2
     dest: /etc/my.cnf.d/server.cnf
 
-- name: Check if root password is set
+# This command will exit non-zero when the root password was set previously
+- name: Check if root password is unset
+  shell: >
+    mysql -u root
+    -p'{{ mariadb_root_password }}'
+    -h localhost
+    -S {{ mariadb_socket }}
+    -e "quit"
+  changed_when: false
+  ignore_errors: true
+  register: root_pwd_check
+
+# Repeat runs with the same password can continue idempotently, otherwise fail.
+- name: Check if the specified root password is already set
   shell: >
     mysqladmin -u root status
   changed_when: false
-  register: root_pwd_check
-
+  when: root_pwd_check.rc != 0
+  
 - name: Set MariaDB root password for the first time (root@localhost)
   mysql_user:
     name: root
-#    password: "{{ mariadb_root_password }}"
+    password: "{{ mariadb_root_password }}"
     host: localhost
+    login_unix_socket: "{{ mariadb_socket }}"
     state: present
-  when: root_pwd_check.rc == 0
+  when: root_pwd_check.rc != 0
 
-- name: Set MariaDB root password for 127.0.0.1, ::1
+- name: Set MariaDB root password for 127.0.0.1, ::1, FQDN
   mysql_user:
     name: root
     password: "{{ mariadb_root_password }}"
     host: "{{ item }}"
     login_user: root
     login_password: "{{ mariadb_root_password }}"
+    login_unix_socket: "{{ mariadb_socket }}"
     state: present
   with_items:
     - ::1
     - 127.0.0.1
-  when: root_pwd_check.rc == 0
+  when: root_pwd_check.rc != 0
 
 - name: Copying /root/.my.cnf config
   template:
